--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
-{
-  "name": "telegram-discord-news-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+﻿{
+  \"name\": \"telegram-discord-news-bot\",
+  \"version\": \"1.0.0\",
+  \"description\": \"Autonomous bot for forwarding Telegram news to Discord\",
+  \"main\": \"bot.js\",
+  \"scripts\": {
+    \"start\": \"node bot.js\"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "discord.js": "^14.24.2",
-    "dotenv": "^17.2.3",
-    "input": "^1.0.1",
-    "node-cron": "^4.2.1",
-    "node-telegram-api": "^0.4.0",
-    "telegram": "^2.26.22"
+  \"dependencies\": {
+    \"discord.js\": \"^14.14.1\",
+    \"telegram\": \"^2.19.5\",
+    \"node-cron\": \"^3.0.3\",
+    \"dotenv\": \"^16.3.1\"
   }
 }
